Added game launching
Updated readme

Use jpackage to build

pom changes